Preserve selected candidates across recipe interactions